<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".home">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="194dp"
        android:layout_height="42dp"
        app:srcCompat="@drawable/simplemeds"
        tools:layout_editor_absoluteY="3dp" />

    <ImageView
        android:id="@+id/navBtn"
        android:layout_width="25dp"
        android:layout_height="17dp"
        app:srcCompat="@drawable/lines2"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="59dp" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="281dp"
        android:layout_height="29dp"
        android:text="@string/heading"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="126dp" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="281dp"
        android:layout_height="29dp"
        android:text="@string/txt5"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="210dp" />

    <SearchView
        android:id="@+id/search"
        android:layout_width="312dp"
        android:layout_height="29dp"
        android:background="@drawable/custom"
        android:backgroundTint="@color/lightgrey"
        android:iconifiedByDefault="false"
        android:queryHint="Search Customers"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="238dp" />

    <Button
        android:id="@+id/InvMng"
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:backgroundTint="@color/lightgrey"
        android:text="@string/InvMng"
        android:textColor="@color/amazonblue"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="342dp" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="281dp"
        android:layout_height="29dp"
        android:text="@string/txt8"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="313dp" />

</androidx.constraintlayout.widget.ConstraintLayout>