<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".home">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="185dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="227dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/simplemeds2" />

    <Button
        android:id="@+id/loginRedir"
        android:layout_width="235dp"
        android:layout_height="62dp"
        android:layout_marginBottom="13dp"
        android:backgroundTint="@color/ligreen"
        android:text="@string/loginBtn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/signupRedir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/signupRedir"
        android:layout_width="236dp"
        android:layout_height="61dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="195dp"
        android:backgroundTint="@color/lgreen"
        android:text="@string/Head2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginRedir"
        app:layout_constraintStart_toStartOf="@+id/loginRedir"
        app:layout_constraintTop_toBottomOf="@+id/loginRedir" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="254dp"
        android:layout_height="147dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183"
        app:srcCompat="@drawable/weddingcarlogo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="307dp"
        android:layout_height="56dp"
        android:layout_marginBottom="72dp"
        android:text="@string/statusmsg"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/loginRedir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>